@@ -3,7 +3,8 @@
   margin-bottom:2px;
 }
 .outl_block_center {
-  text-align: center;
+  /*text-align: center;*/
+  padding-left: 20px;
 }
 .outl_symbol_block, .outl_color_block {
   width:30px;
@@ -16,9 +17,11 @@
 
 .outl_symbol_block {
   height:30px;
+  margin-left:105px; /* to leave space for outl_label */
 }
 .outl_color_block {
   height:16px;
+  margin-left:105px; /* to leave space for outl_label */
 }
 .outl_block_left input {
   margin: inherit;
@@ -34,4 +37,12 @@
   padding:10px;
   background-color:#f5f5f5;
   border:1px dashed #dfdfdf;
+}
+.outl_label {
+    float: left;
+    width: 105px;
+}
+
+.outl_color_hex {
+    margin-left:105px; /* to leave space for outl_label */
 }
